# cabal-prettify

./: .hlint.yaml  CHANGELOG.md  README.md  cabal-prettify.cabal
.github/workflows/: check.yml  haskell-ci.yml  release.yml
examples/: parser-combinators.cabal  quoted-options.cabal  remote-iserv.cabal
examples/other/: active.cabal  diagrams-rasterific.cabal  dorfCAD.cabal  ghc-bin.cabal  ghc-boot-th.cabal  ghc-heap.cabal  ghc.cabal  hpack-convert.cabal  interval-functor-orphans.cabal  iserv-proxy.cabal  iserv.cabal  libiserv.cabal  polynomial.cabal  req.cabal  runghc.cabal  smallcheck.cabal  tasty-unit.cabal
examples/unchanged/: ghci-wrapper.cabal  rts.cabal  smuggler2.cabal
executables/cabal-prettify/: Main.hs
test-data/other/: Yampa.cabal  array.cabal  aws.cabal  cabal-init-with-tested-with.cabal  diagrams-cairo.cabal  diagrams-lib.cabal  examples.cabal  fgl-arbitrary.cabal  force-layout.cabal  gen-dll.cabal  ghc-boot.cabal  ghci.cabal  hashable.cabal  hermetic.cabal  hpc.cabal  ige.cabal  integer-logarithms.cabal  located.cabal  master-plan.cabal  opaleye-gen.cabal  regex-base.cabal  regex-tdfa.cabal  riot.cabal  show-combinators.cabal  validation-lightweight.cabal
test-data/unchanged/: cabal-init-with-dot.cabal  statestack.cabal
test-suites/checks/: Main.hs
