cabal-version: 3.0
name: cabal-prettify
version: 0.2.0.7
author: Ignat Insarov
maintainer: kindaro@gmail.com
tested-with: GHC == 8.10.7, GHC == 9.0.1, GHC == 9.2.1
extra-source-files: test-data/other/*.cabal test-data/unchanged/*.cabal

common commons
  build-depends:
    , base
    , base-unicode-symbols
    , bytestring
    , Cabal
    , directory
    , filepath
    , mtl
    , optparse-applicative
    , parsec
    , pretty
    , transformers
    , utf8-string

  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BlockArguments
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    ImportQualifiedPost
    InstanceSigs
    OverloadedStrings
    RecordWildCards
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    UnicodeSyntax

  ghc-options: -Wall -Wextra -Werror -Wno-name-shadowing

library
  import: commons
  hs-source-dirs: library
  exposed-modules: Distribution.Prettify Distribution.Prettify.Parsers Prelude.Fancy

executable cabal-prettify
  import: commons
  hs-source-dirs: executables/cabal-prettify
  main-is: Main.hs
  build-depends: cabal-prettify

test-suite checks
  import: commons
  type: exitcode-stdio-1.0
  hs-source-dirs: test-suites/checks
  main-is: Main.hs
  build-depends: cabal-prettify, file-embed, tasty, tasty-quickcheck
