name:                tasty-unit
version:             0.1.0.0
synopsis:            Unit tests for the Tasty test framework.
description:         Unit tests for the Tasty test framework.
license:             MIT
license-file:        LICENSE
author:              Ignat Insarov <kindaro@gmail.com>
maintainer:          Roman Cheplyaka <roma@ro-che.info>
homepage:            https://github.com/feuerbach/tasty
bug-reports:         https://github.com/feuerbach/tasty/issues
category:            Testing
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

Source-repository head
  type:     git
  location: git://github.com/feuerbach/tasty.git
  subdir:   unit

library
  exposed-modules:     Test.Tasty.Unit
  other-modules:       Test.Tasty.Unit.Orig
                       Test.Tasty.Unit.Steps
  other-extensions:    TypeFamilies, DeriveDataTypeable
  build-depends:       base >= 4.7 && < 5, tasty >= 1.2.2, call-stack
  default-language:    Haskell2010
  ghc-options: -Wall
