name:                cabal-init-minimal
version:             0.1.0.0
license:             PublicDomain
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:        GHC==8.0.1, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2

library
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
